BPlusTreeEntity