@@ -4,49 +4,111 @@ import sbtdocker.ImageName
 
 import scala.sys.process.Process
 
-val scalaV          = "2.12.10" //10
+//https://github.com/scala/scala/releases/tag/v2.12.10
+val scalaV          = "2.12.10" //TUESDAY 10 SEPTEMBER 2019
 val akkaVersion     = "2.6.21"
-val AkkaHttpVersion = "10.2.7"
+val AkkaHttpVersion = "10.2.10"
+val AkkaMngVersion = "1.4.1"
 val version         = "0.3"
 
 name := "linguistic"
 
 lazy val java17Settings = Seq(
-  "-XX:+UseZGC", // https://www.baeldung.com/jvm-zgc-garbage-collector
+  // https://www.baeldung.com/jvm-zgc-garbage-collector
   "--add-opens",
   "java.base/java.nio=ALL-UNNAMED",
   "--add-opens",
   "java.base/sun.nio.ch=ALL-UNNAMED"
 )
 
-lazy val server = (project in file("server"))
+val scalacSettings = Seq(
+  scalacOptions ++= Seq(
+    "-Xsource:2.13",
+    "-feature",
+    "-Xfatal-warnings",                  // Fail the compilation if there are any warnings.
+    "-deprecation",
+    "-language:implicitConversions",
+
+    /*
+    "-unchecked",                        // Enable additional warnings where generated code depends on assumptions.
+    "-encoding", "UTF-8",                // Specify character encoding used by source files.
+    "-Ywarn-dead-code",                  // Warn when dead code is identified.
+    "-Ywarn-extra-implicit",             // Warn when more than one implicit parameter section is defined.
+    "-Ywarn-numeric-widen",              // Warn when numerics are widened.
+    "-Ywarn-unused:implicits",           // Warn if an implicit parameter is unused.
+    "-Ywarn-unused:imports",             // Warn if an import selector is not referenced.
+    "-Ywarn-unused:locals",              // Warn if a local definition is unused.
+    "-Ywarn-unused:params",              // Warn if a value parameter is unused.
+    "-Ywarn-unused:patvars",             // Warn if a variable bound in a pattern is unused.
+    "-Ywarn-unused:privates",            // Warn if a private member is unused.
+    "-Ywarn-value-discard",              // Warn when non-Unit expression results are unused.
+    */
+  )
+)
+
+lazy val server = project
+  .in(file("server"))
+  .settings(scalacSettings)
   .settings(
     resolvers ++= Seq(
       "Typesafe Snapshots".at("https://repo.typesafe.com/typesafe/snapshots/"),
       "Secured Central Repository".at("https://repo1.maven.org/maven2"),
-      Resolver.sonatypeRepo("snapshots"),
       Resolver.jcenterRepo,
       "Hyperreal Repository" at "https://dl.bintray.com/edadma/maven",
-      "Sonatype Public" at "https://oss.sonatype.org/content/groups/public/"
-    ),
+      "Sonatype Public" at "https://oss.sonatype.org/content/groups/public/",
+    ) ++ Resolver.sonatypeOssRepos("snapshots"),
 
-    /*resolvers ++= Seq(
-        "Typesafe repository" at "https://repo.typesafe.com/typesafe/releases/",
-        "isarn project" at "https://dl.bintray.com/isarn/maven/",
-      ),*/
-    scalacOptions in (Compile, console) := Seq(/*"-release:17",*/"-feature", "-Xfatal-warnings", "-deprecation", "-unchecked"),
+    //scalacOptions in (Compile, console) := Seq("-release:17","-feature", "-Xfatal-warnings", "-deprecation", "-unchecked"),
     scalaVersion := scalaV,
     scalaJSProjects := Seq(ui),
-    pipelineStages in Assets := Seq(scalaJSPipeline),
-    // triggers scalaJSPipeline when using compile or continuous compilation
-    //Compile / compile := (Compile / compile).dependsOn(scalaJSPipeline, cpCss()).value,
-    compile in Compile := (compile in Compile).dependsOn(scalaJSPipeline, cpCss).value,
+    //pipelineStages in Assets := Seq(scalaJSPipeline),
+    Assets / pipelineStages := Seq(scalaJSPipeline),
+    Compile / compile := (Compile / compile).dependsOn(scalaJSPipeline, cpCss()).value,
 
     name := "server",
-    //javaOptions in runMain := Seq("ENV=development", "CONFIG=./server/conf"),
-    runMain / fork := true,
+
+    //run / fork := false,
     run / fork := true,
-    run / javaOptions ++= /*java17Settings,*/ Seq("-XX:+PrintCommandLineFlags", "-XshowSettings:system -version", "-Xmx1700m", "-XX:+UseZGC"),
+    run / connectInput := true,
+
+    //https://backstage.forgerock.com/knowledge/kb/article/a75965340
+    /*
+    -XX:+UseG1GC
+    -XX:InitialHeapSize=2g
+    -XX:MaxHeapSize=2g
+    -XX:MaxMetaspaceSize=256m
+    -XX:MaxGCPauseMillis=500
+    -XX:+DisableExplicitGC
+    -XX:+UseStringDeduplication
+    -XX:+ParallelRefProcEnabled
+    -XX:MaxTenuringThreshold=1
+    -Xlog:gc=debug:file=/tmp/gc.log:time,uptime,level,tags:filecount=5,filesize=100m
+    */
+
+    //https://www.linkedin.com/pulse/jdk-17-g1gc-vs-zgc-usage-core-exchange-application-performance-raza
+    javaOptions ++= Seq(
+      "-XX:+PrintCommandLineFlags",
+      "-XshowSettings:system",
+      "-XX:+UseStringDeduplication",
+      "-XX:+UseCompressedOops", //32bit ref
+      "-XX:NativeMemoryTracking=detail", //summary
+      /*"-Xlog:gc* -version",*/
+      "-Xlog:gc=debug:file=./gc.log:time,uptime,level,tags:filecount=5,filesize=100m",
+      /*"-XX:ObjectAlignmentInBytes=8",*/
+      "-Xmx1000m",
+      "-Xms1000m",
+      "-XX:-UseAdaptiveSizePolicy",   //heap never resizes
+      "-XX:MaxDirectMemorySize=128m", //Will get a error if allocate more mem for direct byte buffers
+      "-XX:+UseG1GC",
+
+      //https://softwaremill.com/reactive-event-sourcing-benchmarks-part-2-postgresql/
+      //"-XX:ActiveProcessorCount=4",
+
+      //"-XX:+UseZGC"
+    ) ++ java17Settings,
+
+    //scalafmtOnCompile := true,
+
     //javaOptions in runMain := Seq("-XX:+PrintFlagsFinal", "-Xms756m", "-Xmx1256m"),
     //javaOptions ++= java17Settings,
     libraryDependencies ++= Seq(
@@ -70,21 +132,14 @@ lazy val server = (project in file("server"))
       
         //https://github.com/edadma/b-tree
         //https://github.com/edadma/b-tree/blob/master/src/test/scala/FileSpecificTests.scala
-        //"xyz.hyperreal" %% "b-tree" % "0.5",
+        "xyz.hyperreal" %% "b-tree" % "0.5", //local build
 
-        "org.wvlet.airframe" %% "airframe-ulid" % "24.6.0",
+        "org.wvlet.airframe" %% "airframe-ulid" % "24.7.1",
         "ru.odnoklassniki" % "one-nio" % "1.7.3",
-        /*
-          val map = new one.nio.mem.LongObjectHashMap[Array[Byte]](5) //5kv only possible
-          map.put(0L, Hex.parseBytes("1111aaaa"))
-          map.put(1L, Hex.parseBytes("11111bbb"))
-        */
-      
+
         "com.graphhopper" % "graphhopper-core" % "8.0", //"7.0", 9.1
 
-
         //"net.openhft" % "chronicle-map" % "3.25ea6", //.8
-
 
         //https://github.com/rohansuri/adaptive-radix-tree
         "com.github.rohansuri" % "adaptive-radix-tree" % "1.0.0-beta",
@@ -113,6 +168,9 @@ lazy val server = (project in file("server"))
         "com.typesafe.akka" %% "akka-http"                   % AkkaHttpVersion,
         "com.typesafe.akka" %% "akka-http-core"              % AkkaHttpVersion,
         "com.typesafe.akka" %% "akka-http-spray-json"        % AkkaHttpVersion,
+        "com.typesafe.akka"             %% "akka-discovery"                     % akkaVersion,
+        "com.lightbend.akka.management" %% "akka-management-cluster-bootstrap"  % AkkaMngVersion,
+        "com.lightbend.akka.management" %% "akka-management-cluster-http"       % AkkaMngVersion,
 
         ("com.typesafe.akka"                  %% "akka-persistence-cassandra" % "1.1.1")
           .excludeAll(
@@ -142,33 +200,38 @@ lazy val server = (project in file("server"))
       "com.typesafe.akka" %% "akka-cluster-tools"          % akkaVersion,
       "com.typesafe.akka" %% "akka-http"                   % AkkaHttpVersion,
       "com.typesafe.akka" %% "akka-http-core"              % AkkaHttpVersion,
-      "com.typesafe.akka" %% "akka-http-spray-json"        % AkkaHttpVersion
+      "com.typesafe.akka" %% "akka-http-spray-json"        % AkkaHttpVersion,
+      "com.typesafe.akka"             %% "akka-discovery"                     % akkaVersion,
+      "com.lightbend.akka.management" %% "akka-management-cluster-bootstrap"  % AkkaMngVersion,
+      "com.lightbend.akka.management" %% "akka-management-cluster-http"       % AkkaMngVersion,
     ),
 
     //javaOptions in runMain += "-DENV=prod",
 
     /*
-  javaOptions in Universal ++= Seq(
-    // -J params will be added as jvm parameters
-    "-J-Xmn1G",
-    "-J-Xms1G",
-    "-J-Xmx3G",
-    // others will be added as app parameters
-    "-Dlog4j.configurationFile=conf/log4j2.xml"
-  ),
-     */
+    javaOptions in Universal ++= Seq(
+      // -J params will be added as jvm parameters
+      "-J-Xmn1G",
+      "-J-Xms1G",
+      "-J-Xmx3G",
+      // others will be added as app parameters
+      "-Dlog4j.configurationFile=conf/log4j2.xml"
+    ),
+    */
 
-    WebKeys.packagePrefix in Assets := "public/",
-    (managedClasspath in Runtime) += (packageBin in Assets).value,
-    mainClass in assembly := Some("linguistic.Application"),
-    assemblyJarName in assembly := s"linguistic-${version}.jar",
+    Assets / WebKeys.packagePrefix := "public/",
+    (Runtime / managedClasspath) += (Assets / packageBin).value,
+    assembly / mainClass := Some("linguistic.Application"),
+    assembly / assemblyJarName := s"linguistic-$version.jar",
     // Resolve duplicates for Sbt Assembly
-    assemblyMergeStrategy in assembly := {
-      case PathList(xs @ _*) if xs.last == "io.netty.versions.properties" ⇒ MergeStrategy.rename
-      case other                                                          ⇒ (assemblyMergeStrategy in assembly).value(other)
+    assembly / assemblyMergeStrategy := {
+      case PathList(xs @ _*) if xs.last == "io.netty.versions.properties" =>
+        MergeStrategy.rename
+      case other                                                          =>
+        (assembly / assemblyMergeStrategy).value(other)
     },
-    imageNames in docker := Seq(ImageName(namespace = Some("haghard"), repository = "linguistic", tag = Some(version))),
-    buildOptions in docker := BuildOptions(
+    docker / imageNames := Seq(ImageName(namespace = Some("haghard"), repository = "linguistic", tag = Some(version))),
+    docker / buildOptions := BuildOptions(
         cache = false,
         removeIntermediateContainers = BuildOptions.Remove.Always,
         pullBaseImage = BuildOptions.Pull.Always
@@ -177,11 +240,11 @@ lazy val server = (project in file("server"))
 
     //sbt -Denv=...  -Dconfig=...
     /*
-  envVars in runMain := Map(
-    "ENV" -> sys.props.getOrElse("env", "development"),
-    "CONFIG" -> sys.props.getOrElse("config", "./server/conf")
-  ),
-     */
+    envVars in runMain := Map(
+      "ENV" -> sys.props.getOrElse("env", "development"),
+      "CONFIG" -> sys.props.getOrElse("config", "./server/conf")
+    ),
+    */
 
     //docker -Denv="development"
     docker / dockerfile := {
@@ -262,8 +325,15 @@ def cpCss() =
     def execute() = {
       //IO.copyFile(dir / "src" / "main" / "resources" / "main.css", dir / "target" /"web"/"web-modules"/"main"/"webjars"/"lib"/"bootstrap"/"css"/"main.css")
       //IO.copyFile(dir / "src" / "main" / "resources" / "chat.css", dir / "target"/"web"/"web-modules"/"main"/"webjars"/"lib"/"bootstrap"/"css"/"chat.css")
-      Process(s"cp ${dir}/src/main/resources/main.css ${dir}/target/web/web-modules/main/webjars/lib/bootstrap/css/").!
-      Process(s"cp ${dir}/src/main/resources/chat.css ${dir}/target/web/web-modules/main/webjars/lib/bootstrap/css/").!
+      Process(s"mkdir $dir/target/web").!
+      Process(s"mkdir $dir/target/web/web-modules").!
+      Process(s"mkdir $dir/target/web/web-modules/main").!
+      Process(s"mkdir $dir/target/web/web-modules/main/webjars").!
+      Process(s"mkdir $dir/target/web/web-modules/main/webjars/lib").!
+      Process(s"mkdir $dir/target/web/web-modules/main/webjars/lib/bootstrap").!
+      Process(s"mkdir $dir/target/web/web-modules/main/webjars/lib/bootstrap/css").!
+      Process(s"cp $dir/src/main/resources/main.css ${dir}/target/web/web-modules/main/webjars/lib/bootstrap/css/").!
+      Process(s"cp $dir/src/main/resources/chat.css ${dir}/target/web/web-modules/main/webjars/lib/bootstrap/css/").!
     }
     println("Coping resources ...")
     haltOnCmdResultError(execute())
@@ -278,7 +348,7 @@ lazy val ui = (project in file("ui"))
     resolvers += "Sonatype snapshots" at "https://oss.sonatype.org/content/repositories/snapshots/",
     scalaVersion := scalaV,
     scalaJSUseMainModuleInitializer := false,
-    scalaJSUseMainModuleInitializer in Test := false,
+    Test / scalaJSUseMainModuleInitializer := false,
     libraryDependencies ++= Seq(
         //"org.singlespaced" %%% "scalajs-d3" % "0.3.4",
         "com.github.japgolly.scalajs-react" %%% "core"  % "0.11.5", //"1.4.2", //"0.11.3",
@@ -305,7 +375,6 @@ lazy val ui = (project in file("ui"))
   .enablePlugins(ScalaJSPlugin, ScalaJSWeb)
   .dependsOn(sharedJs)
 
-scalafmtOnCompile := true
 
 lazy val shared = sbtcrossproject.CrossPlugin.autoImport
   .crossProject(JSPlatform, JVMPlatform)
@@ -327,9 +396,12 @@ lazy val protocol = (project in file("protocol"))
       )
   )
   .settings(
-    PB.targets in Compile := Seq(scalapb.gen(flatPackage = true) -> (sourceManaged in Compile).value / "protobuf")
+    Compile / PB.targets := Seq(scalapb.gen(flatPackage = true) -> (Compile / sourceManaged).value / "protobuf")
   )
 
+ThisBuild / scalafmtOnCompile := true
+
+addCommandAlias("fmt", "scalafmt")
 addCommandAlias("c", "compile")
 addCommandAlias("r", "reload")
 
